# docs/swagger.yaml
@@ -1,4 +1,58 @@
 basePath: /
+definitions:
+  apperror.ErrorJSON:
+    properties:
+      developerMessage:
+        type: string
+      message:
+        type: string
+    type: object
+  models.Cat:
+    properties:
+      age:
+        type: integer
+      chipNumber:
+        type: string
+      dateOfAdmissionToShelter:
+        type: string
+      gender:
+        type: string
+      id:
+        type: integer
+      nickname:
+        type: string
+      photoUrl:
+        type: string
+    type: object
+  models.CatId:
+    properties:
+      catId:
+        type: integer
+    type: object
+  models.CreateCatRequest:
+    properties:
+      age:
+        type: integer
+      chipNumber:
+        type: string
+      dateOfAdmissionToShelter:
+        type: string
+      gender:
+        type: string
+      nickname:
+        type: string
+      photoUrl:
+        type: string
+    required:
+    - nickname
+    type: object
+  rest.healthResponse:
+    properties:
+      message:
+        type: string
+      status:
+        type: integer
+    type: object
 host: 127.0.0.1:9000
 info:
   contact:
@@ -6,5 +60,70 @@ info:
     name: Lev Yuvenskiy
   title: Cat Shelter CRM
   version: "1.0"
-paths: {}
+paths:
+  /cats:
+    get:
+      consumes:
+      - application/json
+      operationId: getCatsList
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Cat'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apperror.ErrorJSON'
+      summary: Get cats list
+      tags:
+      - cats
+    post:
+      consumes:
+      - application/json
+      operationId: createCat
+      parameters:
+      - description: Parameters for creating a cat.
+        in: body
+        name: createCatObject
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateCatRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.CatId'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apperror.ErrorJSON'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apperror.ErrorJSON'
+      summary: Create cat
+      tags:
+      - cats
+  /health:
+    get:
+      consumes:
+      - application/json
+      operationId: health
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/rest.healthResponse'
+      summary: Health check
+      tags:
+      - health
 swagger: "2.0"
